@startuml Products & Menu
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide empty methods

class Product {
    +Id : Guid
    +Name : string
    +Description : string?
    +Barcode : string?
    +TaxRateId : Guid
    +CreatedAt : DateTimeOffset
    +CreatedBy : Guid?
    +UpdatedAt : DateTimeOffset?
    +UpdatedBy : Guid?
    +DeletedAt : DateTimeOffset?
    +DeletedBy : Guid?
}

class TaxRate {
    +Id : Guid
    +Name : string
    +Description : string
    +Rate : decimal
}

class ProductImage {
    +Id : Guid
    +ProductId : Guid
    +Url : string
}

class Tag {
    +Id : Guid
    +Name : string
    +ImageUrl : string?
}

class Allergen {
    +Id : Guid
    +Name : string
}

class ProductTag {
    +ProductId : Guid
    +TagId : Guid
}

class ProductAllergen {
    +ProductId : Guid
    +AllergenId : Guid
}

class PriceGroup {
    +Id : Guid
    +Name : string
}

class ProductPrice {
    +Id : Guid
    +ProductId : Guid
    +PriceGroupId : Guid
    +Net : decimal
}

class ModifierGroup {
    +Id : Guid
    +Name : string
}

class Modifier {
    +Id : Guid
    +Name : string
    +ModifierGroupId : Guid
}

class ProductModifierGroup {
    +ProductId : Guid
    +ModifierGroupId : Guid
}

class ProductList {
    +Id : Guid
    +Name : string
}

class ProductListItem {
    +ProductListId : Guid
    +ProductId : Guid
}

Product "*" -- "1" TaxRate
Product "1" -- "*" ProductImage
Product "1" -- "*" ProductTag
ProductTag "*" -- "1" Tag
Product "1" -- "*" ProductAllergen
ProductAllergen "*" -- "1" Allergen
Product "1" -- "*" ProductPrice
ProductPrice "*" -- "1" PriceGroup
Product "1" -- "*" ProductModifierGroup
ProductModifierGroup "*" -- "1" ModifierGroup
ModifierGroup "1" -- "*" Modifier
ProductList "1" -- "*" ProductListItem
ProductListItem "*" -- "1" Product

@enduml
